--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1>About Lokpati</h1>
       <h2>Experience</h2>
       <p>
-        I am Software developer Currently working for <a href="http://tcs.com">TCS</a> on a Financial project.
+        I am a Full-stack Software developer Currently working for <a href="http://tcs.com">TCS</a> on a Financial project.
         Being a Full-Stack JavaScript (TypeScript) Nodejs Developer with good experience in API development and
         consuming it in the front end made with ReactJS, also know state management with Redux and session handling.
         Please have a look on my Github Profile for my coding standard, also I have recently created a <a
@@ -78,6 +78,17 @@
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
           href="https://www.jiscollege.ac.in/">JIS college of Engineering</a></h3>
 
+      <h3>Technology</h3>
+
+      <div>
+        <h4>Language and Libraries: JavaScript, React, ReactJS, Nodejs, TypeScript, Python </h4>
+        <h4>Database:MongoDB, SQL, PLSQL</h4>
+        <h4>Framework:NEXTjs, React Native, Bootstrap</h4>
+        <h4>Tools: Git, expo, VScode </h4>
+        <h4>OS: Linux, Windows </h4>
+
+      </div>
+      
     </div>
   </main>
 
