--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         Being a Full-Stack JavaScript (TypeScript) Nodejs Developer with good experience in API development and
         consuming it in the front end made with ReactJS, also know state management with Redux and session handling.
         Please have a look on my Github Profile for my coding standard, also I have recently created a <a
-          href="https://next-ts-todo.vercel.app">full stack app</a> and deployed it on Vercel (link: ) with NEXTjs
+          href="https://next-ts-todo.vercel.app">full stack app</a> and deployed it on Vercel with NEXTjs.
       </p>
       <h2>Education</h2>
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
@@ -84,7 +84,7 @@
         <h4>Language and Libraries: JavaScript, React, ReactJS, Nodejs, TypeScript, Python </h4>
         <h4>Database:MongoDB, SQL, PLSQL</h4>
         <h4>Framework:NEXTjs, React Native, Bootstrap</h4>
-        <h4>Tools: Git, expo, VScode </h4>
+        <h4>Tools: Git, expo, Redux, VScode </h4>
         <h4>OS: Linux, Windows </h4>
 
       </div>
