--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           alt="Mobile App Developent">
         <br />
         Mobile App Developent
-        <a href="https://github.com/seen2/contacts">View</a>
+        <a href="https://github.com/seen2/rn-ts-todo">View</a>
       </div>
       <div class="card">
         <img "
