Added Mobile Expo App Editior

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
- 
+
   <header>
     <nav>
       <a class="navItem" href="#">Lokpati Tiwari</a>
@@ -64,7 +64,8 @@
       <h1>About Lokpati</h1>
       <h2>Experience</h2>
       <p>
-        I am a Full-stack Software developer Currently working for <a href="http://tcs.com">TCS</a> on a Financial project.
+        I am a Full-stack Software developer Currently working for <a href="http://tcs.com">TCS</a> on a Financial
+        project.
         Being a Full-Stack JavaScript (TypeScript) Nodejs Developer with good experience in API development and
         consuming it in the front end made with ReactJS, also know state management with Redux and session handling.
         Please have a look on my Github Profile for my coding standard, also I have recently created a <a
@@ -84,8 +85,22 @@
         <h4>OS: Linux, Windows </h4>
 
       </div>
-      
+      <div>
+      <hr/>
+
+        <h1>Below is the Mobile App created by Expo(React Native) by me, try editing and playing with it</h1>
+      </div>
+      <div data-snack-id="@shintu/rn-ts-todo" data-snack-platform="web" data-snack-preview="true"
+        data-snack-theme="dark"
+        style="overflow:hidden;background:#212121;border:1px solid var(--color-border);border-radius:4px;height:720px;width:100%">
+      </div>
+      <script async src="https://snack.expo.dev/embed.js"></script>
+
+
+
     </div>
+
+
   </main>
 
 </body>
