--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
           href="https://www.jiscollege.ac.in/">JIS college of Engineering</a></h3>
 
-      <h2>Technology</h2>
+      <h2>Skills and Technologies</h2>
 
       <div>
+        <hr/>
         <h4>Language and Libraries: JavaScript, React, ReactJS, Nodejs, TypeScript, Python </h4>
         <h4>Database:MongoDB, SQL, PLSQL</h4>
         <h4>Framework:NEXTjs, React Native, Bootstrap</h4>
