--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div>
       <hr/>
 
-        <h1>Below is the Mobile App created by Expo(React Native) by me, try editing and playing with it</h1>
+        <h1>Below is the Mobile App created by Expo(React Native) by me, try editing and playing with it(Supports on Wide Screens)</h1>
       </div>
       <div data-snack-id="@shintu/rn-ts-todo" data-snack-platform="web" data-snack-preview="true"
         data-snack-theme="dark"
