--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       <h2>Education</h2>
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
           href="https://www.jiscollege.ac.in/">JIS college of Engineering</a></h3>
+      <h2>Experience</h2>
+      <h3>Fullstack Software Developer (2021-23). from <a
+          href="https://www.tcs.com/">Tata Consultancy Services Limited</a></h3>
+      <h3>Fullstack Software Developer (2023-PRESENT). from <a
+          href="https://www.infosys.com/">Infosys Limited</a></h3>
 
       <h2>Skills and Technologies</h2>
 
@@ -81,8 +86,8 @@
         <hr/>
         <h4>Language and Libraries: JavaScript, React, ReactJS, Nodejs, TypeScript, Python </h4>
         <h4>Database:MongoDB, SQL, PLSQL</h4>
-        <h4>Framework:NEXTjs, React Native, Bootstrap</h4>
-        <h4>Tools: Git, expo, Redux, VScode </h4>
+        <h4>Framework:NEXTjs, React Native, Bootstrap, Flutter</h4>
+        <h4>Tools: Git, expo, Redux, VScode, WSL </h4>
         <h4>OS: Linux, Windows </h4>
 
       </div>
