--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
           href="https://www.jiscollege.ac.in/">JIS college of Engineering</a></h3>
       <h2>Experience</h2>
-      <h3>Fullstack Software Developer (2021-23). from <a
+      <h3>System Engineer (As a Fullstack Developer) (2021-23). from <a
           href="https://www.tcs.com/">Tata Consultancy Services Limited</a></h3>
-      <h3>Fullstack Software Developer (2023-PRESENT). from <a
+      <h3>Associate Consultant (As a Fullstack Developer) (2023-PRESENT). from <a
           href="https://www.infosys.com/">Infosys Limited</a></h3>
 
       <h2>Skills and Technologies</h2>
