--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
           href="https://www.jiscollege.ac.in/">JIS college of Engineering</a></h3>
       <h2>Experience</h2>
-      <h3>System Engineer (As a Fullstack Developer) - (2021-23). </h3>
-      <h4><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></h4>
-      <h3>Associate Consultant (As a Fullstack Developer) - (2023-PRESENT). </h3>
-       <h4><a href="https://www.infosys.com/">Infosys Limited</a></h4>
+        <hr/>
+      <h3>System Engineer (As a Fullstack Developer) - (2021-23).
+      <u><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></u>  </h3>
+      <h3>Associate Consultant (As a Fullstack Developer) - (2023-PRESENT). 
+       <u><a href="https://www.infosys.com/">Infosys Limited</a></u> </h3>
 
       <h2>Skills and Technologies</h2>
 
