--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h1>About Lokpati</h1>
       <h2>Experience</h2>
       <p>
-        I am a Full-stack Software developer Currently working for <a href="http://tcs.com">TCS</a> on a Financial
+        I am a Full-stack Software developer Currently working for <a href="http://infosys.com">Infosys Limited</a> on a Digital Communication
         project.
         Being a Full-Stack JavaScript (TypeScript) Nodejs Developer with good experience in API development and
         consuming it in the front end made with ReactJS, also know state management with Redux and session handling.
@@ -77,8 +77,14 @@
       <h2>Experience</h2>
       <ol>
       <hr/>
-      <li><h3> <u><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></u> System Engineer (As a Fullstack Developer) - (2021-23). </h3></li> 
-      <li><h3> <u><a href="https://www.infosys.com/">Infosys Limited</a></u> Associate Consultant (As a Fullstack Developer) - (2023-PRESENT).</h3></li> 
+      <li>
+       <h3> <u><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></u> System Engineer (As a Fullstack Developer) - (2021-23). </h3>
+      <h3>Project: </h3> <h4>Financial: Insurance and Banking</h4>
+       </li> 
+      <li>
+       <h3> <u><a href="https://www.infosys.com/">Infosys Limited</a></u> Associate Consultant (As a Fullstack Developer) - (2023-PRESENT).</h3>
+       <h3>Project: </h3> <h4>Digital Communication</h4>
+        </li> 
       </ol>                                         
       <h2>Skills and Technologies</h2>
 
