Profile updated for Tech and Skills

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta Content-Type: text/html; charset=utf-8>
   <meta name="viewport" content="width=device-width">
   <title>Lokpati Tiwari</title>
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/36004515?s=32" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,18 +44,13 @@
         <a href="https://github.com/seen2/next-ts-todo">View</a>
       </div>
       <div class="card">
-        <img "
-        height=" 100px" width="200px" src="https://github.githubassets.com/images/modules/site/mobile/beta-all.png"
-          alt="Mobile App Developent">
+        <img height="100px" width="200px" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="Mobile App Development">
         <br />
         Mobile App Developent
         <a href="https://github.com/seen2/rn-ts-todo">View</a>
       </div>
       <div class="card">
-        <img "
-        height=" 100px" width="200px"
-          src="https://res.cloudinary.com/practicaldev/image/fetch/s--rjxO02ux--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/w4qxi1gsnhuey77654qj.png"
-          alt="Data Structure">
+        <img height="100px" width="200px" src="Tree_(computer_science).svg.png" alt="Data Structure">
         <br />
         Data Structure
         <a href="https://github.com/seen2/Python/tree/master/DataStructure">View</a>
@@ -64,10 +60,15 @@
       <h1>About Lokpati</h1>
       <h2>Experience</h2>
       <p>
-        I am a Full-stack Software developer Currently working for <a href="http://infosys.com">Infosys Limited</a> on a Digital Communication
+        I am a Full-stack Software developer Currently working for <a href="http://metlife.com">MetLife</a> on a Case Defination Insurance
         project.
-        Being a Full-Stack JavaScript (TypeScript) Nodejs Developer with good experience in API development and
-        consuming it in the front end made with ReactJS, also know state management with Redux and session handling.
+        Being a Full-Stack JavaScript (TypeScript) Nodejs, Java(Spring Boot) Developer with good experience in API development and
+        consuming it in the front end made with ReactJS, also know state management with Redux/Contexts API and JWT session handling.
+        Deploying the application on cloud platforms like Azure and Vercel. Also building and deploying mobile applications using
+        React Native and Expo.
+        I have a good understanding of the Software Development Life Cycle (SDLC) and Agile methodologies.
+        I have a good understanding of Object-Oriented Programming (OOP) concepts and Design Patterns.
+        I have a good understanding of Data Structures and Algorithms (DSA).
         Please have a look on my Github Profile for my coding standard, also I have recently created a <a
           href="https://next-ts-todo.vercel.app">full stack app</a> and deployed it on Vercel with NEXTjs.
       </p>
@@ -75,25 +76,31 @@
       <h3>Bachelor Degree in Electronics and Communication Engineering (2016-20). from <a
           href="https://www.jiscollege.ac.in/">JIS college of Engineering</a></h3>
       <h2>Experience</h2>
-      <ol>
+      <ul>
       <hr/>
+      <li>
+       <h3> <u><a href="https://www.metlife.com/">MetLife</a></u> Team Leader (As a Fullstack Developer) - (2025-PRESENT).</h3>
+       <h3>Project: </h3> <h4>Digital Communication</h4>
+        </li>
+      <li>
+       <h3> <u><a href="https://www.infosys.com/">Infosys Limited</a></u> Associate Consultant (As a Fullstack Developer) - (2023-2025).</h3>
+       <h3>Project: </h3> <h4>Digital Communication</h4>
+        </li>
       <li>
        <h3> <u><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></u> System Engineer (As a Fullstack Developer) - (2021-23). </h3>
       <h3>Project: </h3> <h4>Financial: Insurance and Banking</h4>
        </li> 
-      <li>
-       <h3> <u><a href="https://www.infosys.com/">Infosys Limited</a></u> Associate Consultant (As a Fullstack Developer) - (2023-PRESENT).</h3>
-       <h3>Project: </h3> <h4>Digital Communication</h4>
-        </li> 
-      </ol>                                         
+       
+      </ul>                                         
       <h2>Skills and Technologies</h2>
 
       <div>
         <hr/>
-        <h4>Language and Libraries: JavaScript, React, ReactJS, Nodejs, TypeScript, Python </h4>
+        <h4>Language and Libraries: JavaScript, JAVA, React, ReactJS, Nodejs, TypeScript, Python </h4>
         <h4>Database:MongoDB, SQL, PLSQL</h4>
-        <h4>Framework:NEXTjs, React Native, Bootstrap, Flutter</h4>
-        <h4>Tools: Git, expo, Redux, VScode, WSL </h4>
+        <h4>Framework:NEXTjs, Spring Boot, React Native, Bootstrap, Flutter</h4>
+        <h4>Tools: Git, Github Copilot, JIRA, expo, Redux, VScode, WSL </h4>
+        <h4>Cloud : Azure </h4>
         <h4>OS: Linux, Windows </h4>
 
       </div>
