--- a/index.html
+++ b/index.html
@@ -80,15 +80,36 @@
       <hr/>
       <li>
        <h3> <u><a href="https://www.metlife.com/">MetLife</a></u> Team Leader (As a Fullstack Developer) - (2025-PRESENT).</h3>
-       <h3>Project: </h3> <h4>Digital Communication</h4>
+       <h3>Project: </h3> 
+       <ol>
+        <li>
+          <h4>Project: Case Defination Facility (CDF) </h4>
+        </li>
+       </ol>
         </li>
       <li>
        <h3> <u><a href="https://www.infosys.com/">Infosys Limited</a></u> Associate Consultant (As a Fullstack Developer) - (2023-2025).</h3>
-       <h3>Project: </h3> <h4>Digital Communication</h4>
+        <h3>Project: </h3>
+       <ol>
+        <li>
+          <h4>Project: Digital Communication</h4>
+        </li>
+        <li>
+          <h4>Project: Amex Lounge System</h4>
+        </li>
+       </ol>
         </li>
       <li>
        <h3> <u><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></u> System Engineer (As a Fullstack Developer) - (2021-23). </h3>
-      <h3>Project: </h3> <h4>Financial: Insurance and Banking</h4>
+      <h3>Project: </h3> 
+      <ol>
+        <li>
+          <h4>Project: Financial: Insurance and Banking</h4>
+        </li>
+        <li>
+          <h4>Project: Claims Application</h4>
+        </li>
+      </ol>
        </li> 
        
       </ul>                                         
