Updated links and fix

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         I have a good understanding of the Software Development Life Cycle (SDLC) and Agile methodologies.
         I have a good understanding of Object-Oriented Programming (OOP) concepts and Design Patterns.
         I have a good understanding of Data Structures and Algorithms (DSA).
-        Please have a look on my Github Profile for my coding standard, also I have recently created a <a
+        Please have a look on my <a href="https://github.com/seen2/">Github Profile</a> for my coding standard, also I have created a <a
           href="https://next-ts-todo.vercel.app">full stack app</a> and deployed it on Vercel with NEXTjs.
       </p>
       <h2>Education</h2>
@@ -80,34 +80,34 @@
       <hr/>
       <li>
        <h3> <u><a href="https://www.metlife.com/">MetLife</a></u> Team Leader (As a Fullstack Developer) - (2025-PRESENT).</h3>
-       <h3>Project: </h3> 
+       <h3>Projects: </h3> 
        <ol>
         <li>
-          <h4>Project: Case Defination Facility (CDF) </h4>
+          <h4>Case Definition Facility (CDF) </h4>
         </li>
        </ol>
         </li>
       <li>
        <h3> <u><a href="https://www.infosys.com/">Infosys Limited</a></u> Associate Consultant (As a Fullstack Developer) - (2023-2025).</h3>
-        <h3>Project: </h3>
+        <h3>Projects: </h3>
        <ol>
         <li>
-          <h4>Project: Digital Communication</h4>
+          <h4>Digital Communication: Configure Process and Quotation (CPQ)</h4>
         </li>
         <li>
-          <h4>Project: Amex Lounge System</h4>
+          <h4>Amex Lounge System</h4>
         </li>
        </ol>
         </li>
       <li>
        <h3> <u><a href="https://www.tcs.com/">Tata Consultancy Services Limited</a></u> System Engineer (As a Fullstack Developer) - (2021-23). </h3>
-      <h3>Project: </h3> 
+      <h3>Projects: </h3> 
       <ol>
         <li>
-          <h4>Project: Financial: Insurance and Banking</h4>
+          <h4>Financial: Insurance and Banking</h4>
         </li>
         <li>
-          <h4>Project: Claims Application</h4>
+          <h4>Claims Application</h4>
         </li>
       </ol>
        </li> 
